# OOP

./: README.md  report.tex
lab00/: Figure.hpp  Triangle.cpp
lab01/: Makefile  TTree.cpp  TTree.hpp  Triangle.cpp  Triangle.hpp  main.cpp
lab02/: TTree.cpp  Triangle.cpp  main.cpp
lab03/: main.cpp
lab03/release/: Figure.hpp  TTree.hpp
lab04/: .gitignore  CMakeLists.txt  TTree.h  main.cpp  mktest.py
lab05/: Tree.h  strace_out
lab06/dirty/: Queue.hpp  TAllocationBlock.cpp  TAllocationBlock.hpp  TIterator.hpp  TTree.h  TTree.hpp  main.cpp
lab06/release/: .gitignore  Figure.hpp  Queue.hpp  Rectangle.cpp  Rectangle.hpp  Sqr.cpp  Sqr.hpp  TAllocationBlock.cpp  TIterator.hpp  TTree.hpp  Tree.h  Tree.hpp  Triangle.cpp  Triangle.hpp  main.cpp
lab07/: Rectangle.cpp  Rectangle.hpp  Sqr.cpp  Sqr.hpp  TTree.hpp  Tree.h  Tree.hpp  Triangle.hpp
